--- a/style.css
+++ b/style.css
@@ -14,6 +14,16 @@ body {
     width: 90%;
 }
 
+#star-icon {
+    padding-top: 20px;
+}
+
+svg {
+    background: hsl(216, 12%, 54%);
+    padding: 5px;
+    border-radius: 20px;
+}
+
 .inner-container {
     padding: 0 20px;
 }
@@ -22,6 +32,30 @@ h3 {
     color: hsl(0, 0%, 100%);
 }
 
-p, #btns {
+p, .btns {
     color: hsl(217, 12%, 63%);
 }
+
+.btns {
+    display: flex;
+    justify-content: center;
+    
+
+}
+
+.btn {
+    margin: 0 5px;
+    background-color: #4CAF50; /* Green */
+  border: none;
+  color: hsl(217, 12%, 63%);
+}
+
+#submit {
+    height:20px; 
+    width:100px; 
+    margin: 25px -50px; 
+    position:relative;
+    top:50%; 
+    left:50%;
+}
+
