--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: hsl(216, 12%, 8%);
+    background-color: white;
     font-family: 'Overpass', sans-serif;
 }
 
@@ -32,30 +32,40 @@ h3 {
     color: hsl(0, 0%, 100%);
 }
 
-p, .btns {
+p,
+.btns {
     color: hsl(217, 12%, 63%);
 }
 
 .btns {
     display: flex;
     justify-content: center;
-    
+
 
 }
 
 .btn {
     margin: 0 5px;
-    background-color: #4CAF50; /* Green */
-  border: none;
-  color: hsl(217, 12%, 63%);
+    background-color: white;
+    border: none;
+    color: hsl(217, 12%, 63%);
+    border-radius: 20px;
 }
 
 #submit {
-    height:20px; 
-    width:100px; 
-    margin: 25px -50px; 
-    position:relative;
-    top:50%; 
-    left:50%;
+    height: 20px;
+    width: 100px;
+    margin: 25px -50px;
+    position: relative;
+    top: 50%;
+    left: 50%;
+}
+
+#second-panel {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
 }
 
