--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: white;
+    background-color: hsl(216, 12%, 8%);
     font-family: 'Overpass', sans-serif;
 }
 
@@ -12,24 +12,26 @@ body {
     transform: translate(-50%, -50%);
     border-radius: 10px;
     width: 90%;
-    height: 300px;
+    height: 370px;
+    max-width: 375px;
 }
 
 #star-icon {
     padding-top: 20px;
 }
 
-svg {
+.star {
     background: hsl(213, 19%, 23%);
-    padding: 5px;
+    padding: 10px;
     border-radius: 20px;
+    
 }
 
 .inner-container {
     padding: 0 20px;
 }
 
-h3 {
+h1 {
     color: hsl(0, 0%, 100%);
 }
 
@@ -38,10 +40,12 @@ p,
     color: hsl(217, 12%, 63%);
 }
 
+
 .btns {
     display: flex;
     justify-content: center;
 }
+
 
 .btns input[type="radio"] {
     display: none;
@@ -56,7 +60,7 @@ p,
 #submitBtn {
     margin: 0;
     position: absolute;
-    top: 90%;
+    top: 88%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
 }
@@ -75,7 +79,7 @@ p,
 button {
     border: none;
     background-color: hsl(25, 97%, 53%);
-    width: 50%;
+    width: 70%;
     height: 2.75rem;
     border-radius: 2rem;
     color: white;
@@ -106,4 +110,46 @@ label{
     align-items: center;
     justify-content: center;
     color: hsl(217, 12%, 63%);
+    margin: 0 5px;
+}
+
+@media (hover: hover) {
+    form label:hover{
+    background-color: hsl(25, 97%, 53%);
+    color: white;
+    cursor: pointer;
+    }  
+}
+
+form {
+    padding-bottom: 40px;
+}
+
+.thank-you-img {
+    margin-top: 40px;
+}
+
+.thank-you-text {
+    margin: 0 20px;
+}
+
+#rating-selected {
+    color: hsl(25, 97%, 53%);
+
+}
+
+.rating-box {
+    margin-top: 1rem !important;
+    background-color: hsl(213, 19%, 23%);
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+    height: 30px;
+    margin: auto;
+}
+
+.thank-you-title {
+    margin: 1rem 0;
 }
